--- a/dockerfile.bkp
+++ b/dockerfile.bkp
@@ -1,26 +1,6 @@
 #pull base image
-FROM ubuntu
-
-#install Nginx
-RUN
-apt-get update &&
-apt-get install -y nginx &&
-rm -rf /var/lib/apt/lists/* && 
-echo "ndaemon off;" >> /etc/nginx/nginx.conf && 
-chown -R www-data:www-data /var/lib/nginx
-
-# Define mountable directories.
-
-VOLUME ["/etc/nginx/sites-enabled", "/etc/nginx/certs", "/etc/nginx/conf.d", "/var/log/nginx", "/var/www/html"]
-
-# Define working directory.
-
-WORKDIR /etc/nginx
-
-# Define default command.
-
-CMD ["nginx"]
-
+FROM nginx
+COPY static-html-directory /usr/share/nginx/html
 # Expose ports.
 
 EXPOSE 80
